(fix): Fixing links for index in about me!

--- a/repo-about-me.html
+++ b/repo-about-me.html
@@ -22,7 +22,7 @@
     <header> <!-- Header begins here! -->
         <nav class="navbar navbar-expand-sm navbar-dark bg-navbar-custom">
             <div class="container">
-                <a href="repo-index.html" class="navbar-brand">
+                <a href="index.html" class="navbar-brand">
                     <h1>
                         <span style="color: white; font-weight: bold;">Shamslux's</span>
                         <span style="color: black;">Tech</span>
@@ -40,10 +40,10 @@
                 <div class="collapse navbar-collapse" id="main-nav">
                     <ul class="navbar-nav  ml-auto">
                         <li class="nav-item">
-                            <a href="repo-index.html" class="nav-link">Home</a>
+                            <a href="index.html" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="repo-about-me.html" class="nav-link">About Me</a>
+                            <a href="about-me.html" class="nav-link">About Me</a>
                         </li>
                         <li class="nav-item">
                             <a href="coming-soon-temp.html" class="nav-link">Data Projects</a>
