(new): Data Projects added!

--- a/about-me.html
+++ b/about-me.html
@@ -46,7 +46,7 @@
                             <a href="about-me.html" class="nav-link">About Me</a>
                         </li>
                         <li class="nav-item">
-                            <a href="coming-soon-temp.html" class="nav-link">Data Projects</a>
+                            <a href="data-projects.html" class="nav-link">Data Projects</a>
                         </li>
                         <li class="nav-item">
                             <a href="coming-soon-temp.html" class="nav-link">WebDev Projects</a>
