--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a href="data-projects.html" class="nav-link">Data Projects</a>
             </li>
             <li class="nav-item">
-              <a href="coming-soon-temp.html" class="nav-link">WebDev Projects</a>
+              <a href="web-projects.html" class="nav-link">WebDev Projects</a>
             </li>
           </ul>
         </div>
@@ -136,15 +136,18 @@
   <footer class="text-muted"> <!-- Footer begins here! -->
     <div class="container">
         <div class="row">
-            <p>
-                <a href="#home">Back to top</a>
+            <div class="col-md-6 d-flex align-items-center">
+                <p>
+                    <a href="#home">Back to top</a>
                 </p>
-        </div>
-        <div class="float-right">
-          <p>Shamslux's TechVault &copy; Shamslux 2024.</p>
+            </div>
+            <div class="col-md-6">
+                <p class="float-right">Shamslux's TechVault &copy; Shamslux 2024.</p>
+            </div>
         </div>
     </div>
-</footer> <!-- Footer ends here! -->
+  </footer> <!-- Footer ends here! -->
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
