(fix): Adjusted cards in Data Projects to match the proper size among them!

--- a/data-projects.html
+++ b/data-projects.html
@@ -80,10 +80,10 @@
         <div class="album py-5 bg-light">
           <div class="container">
               <div class="row">
-              <div class="col-md-4"> <!-- A card begins here! -->
-                <div class="card mb-4 shadow-sm d-flex align-items-center justify-content-center">
-                  <img class="card-img-top img-fluid card-img-fixed-height" src="img/hive-impala-ai.png" alt="hive-impala-course">
-                  <div class="card-body">
+              <div class="col-md-4 mb-4"> <!-- A card begins here! -->
+                <div class="card mb-4 shadow-sm d-flex flex-column h-100">
+                  <img class="card-img-top img-fluid" src="img/hive-impala-ai.png" alt="hive-impala-course">
+                  <div class="card-body d-flex flex-column justify-content-between">
                     <h4>
                         Hive/Impala Course and Project
                     </h4>
@@ -105,10 +105,10 @@
                 </div>
               </div> <!-- A card ends here! -->
 
-              <div class="col-md-4"> <!-- A card begins here! -->
-                <div class="card mb-4 shadow-sm d-flex align-items-center justify-content-center">
-                  <img class="card-img-top img-fluid card-img-fixed-height" src="img/advanced-sql-ai.png" alt="advanced-sql-server-course">
-                  <div class="card-body">
+              <div class="col-md-4 mb-4"> <!-- A card begins here! -->
+                <div class="card mb-4 shadow-sm d-flex flex-column h-100">
+                  <img class="card-img-top img-fluid" src="img/advanced-sql-ai.png" alt="advanced-sql-server-course">
+                  <div class="card-body d-flex flex-column justify-content-between">
                     <h4>
                       SQL Server Master Class - Advanced SQL
                   </h4>
@@ -131,10 +131,10 @@
                 </div>
               </div> <!-- A card ends here! -->
 
-              <div class="col-md-4"> <!-- A card begins here! -->
-                <div class="card mb-4 shadow-sm d-flex align-items-center justify-content-center">
-                  <img class="card-img-top img-fluid card-img-fixed-height" src="img/palmeira-vale-thumbail.png" alt="palmeira-vale">
-                  <div class="card-body">
+              <div class="col-md-4 mb-4"> <!-- A card begins here! -->
+                <div class="card mb-4 shadow-sm d-flex flex-column h-100">
+                  <img class="card-img-top img-fluid" src="img/palmeira-vale-thumbail.png" alt="palmeira-vale">
+                  <div class="card-body d-flex flex-column justify-content-between">
                     <h4>
                       Palmeira do Vale - My First Project!
                   </h4>
@@ -157,10 +157,10 @@
                 </div>
               </div> <!-- A card ends here! -->
 
-              <div class="col-md-4"> <!-- A card begins here! -->
-                <div class="card mb-4 shadow-sm d-flex align-items-center justify-content-center">
-                  <img class="card-img-top img-fluid card-img-fixed-height" src="img/ellas-eshop-thumbail.png" alt="ellas-eshop">
-                  <div class="card-body">
+              <div class="col-md-4 mb-4"> <!-- A card begins here! -->
+                <div class="card mb-4 shadow-sm d-flex flex-column h-100">
+                  <img class="card-img-top img-fluid" src="img/ellas-eshop-thumbail.png" alt="ellas-eshop">
+                  <div class="card-body d-flex flex-column justify-content-between">
                     <h4>
                       Ellas E-Shop - The Second Project!
                   </h4>
@@ -185,10 +185,10 @@
                 </div>
               </div> <!-- A card ends here! -->
 
-              <div class="col-md-4"> <!-- A card begins here! -->
-                <div class="card mb-4 shadow-sm d-flex align-items-center justify-content-center">
-                  <img class="card-img-top img-fluid card-img-fixed-height" src="img/budget-thumbail.png" alt="budget-thumbail">
-                  <div class="card-body">
+              <div class="col-md-4 mb-4"> <!-- A card begins here! -->
+                <div class="card mb-4 shadow-sm d-flex flex-column h-100">
+                  <img class="card-img-top img-fluid" src="img/budget-thumbail.png" alt="budget-thumbail">
+                  <div class="card-body d-flex flex-column justify-content-between">
                     <h4>
                       Budget Management - A Power BI Professional Course
                   </h4>
@@ -208,10 +208,10 @@
               </div> <!-- A card ends here! -->
 
               
-              <div class="col-md-4"> <!-- A card begins here! -->
-                <div class="card mb-4 shadow-sm d-flex align-items-center justify-content-center">
-                  <img class="card-img-top img-fluid card-img-fixed-height" src="img/python-ibge.png" alt="python-ibge-thumbail">
-                  <div class="card-body">
+              <div class="col-md-4 mb-4"> <!-- A card begins here! -->
+                <div class="card mb-4 shadow-sm d-flex flex-column h-100">
+                  <img class="card-img-top img-fluid" src="img/python-ibge.png" alt="python-ibge-thumbail">
+                  <div class="card-body d-flex flex-column justify-content-between">
                     <h4>
                       Automation in Python
                   </h4>
