--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -12,14 +12,22 @@
   <!-- Customized CSS -->
   <link rel="stylesheet" href="css/customized-css.css">
 
-  <!-- Font awsesome link -->
+  <!-- Font Awesome link -->
   <script src="https://kit.fontawesome.com/d4b2501713.js" crossorigin="anonymous"></script>
 
   <title>Shamslux's TechVault</title>
 </head>
 
 <body>
-  <header> <!-- Header begins here! -->
+
+  <!-- Progress bar begins here! -->
+  <div class="progress-container">
+    <div class="progress-bar" id="myBar"></div>
+  </div>
+  <!-- Progress bar ends here! -->
+
+  <!-- Header begins here! -->
+  <header>
     <nav class="navbar navbar-expand-sm navbar-dark bg-navbar-custom">
       <div class="container">
         <a href="index.html" class="navbar-brand">
@@ -32,13 +40,11 @@
         </a>
 
         <button class="navbar-toggler" data-toggle="collapse" data-target="#main-nav">
-          <span class="navbar-toggler-icon">
-
-          </span>
+          <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="main-nav">
-          <ul class="navbar-nav  ml-auto">
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a href="index.html" class="nav-link">Home</a>
             </li>
@@ -55,9 +61,11 @@
         </div>
       </div>
     </nav>
-  </header> <!-- Header ends here! -->
+  </header>
+  <!-- Header ends here! -->
 
-  <section id="home"> <!-- Section top-home begins here! -->
+  <!-- Section top-home begins here! -->
+  <section id="home">
     <div class="container">
       <div class="row">
         <div class="col-md-6 d-flex">
@@ -84,16 +92,16 @@
         </div>
       </div>
     </div>
-  </section> <!-- Section top-home ends here! -->
+  </section>
+  <!-- Section top-home ends here! -->
 
-  <section class="box"> <!-- Section bi-box begins here! -->
+  <!-- Section bi-box begins here! -->
+  <section class="box">
     <div class="container">
       <div class="row">
         <div class="col-md-6 d-flex">
           <div class="align-self-center">
-            <h2>
-              What is Business Intelligence and why does it matter for you?
-            </h2>
+            <h2>What is Business Intelligence and why does it matter for you?</h2>
             <p class="text-justify">
               Business Intelligence (BI) is not just a buzzword; it's the key to unlocking hidden insights within your
               data. As a BI professional, I'll take you on a journey to discover why BI matters for you. Explore the
@@ -107,16 +115,16 @@
         </div>
       </div>
     </div>
-  </section> <!-- Section bi-box ends here! -->
+  </section>
+  <!-- Section bi-box ends here! -->
 
-  <section class="box"> <!-- Section de-box begins here! -->
+  <!-- Section de-box begins here! -->
+  <section class="box">
     <div class="container">
       <div class="row">
         <div class="col-md-6 d-flex">
           <div class="align-self-center">
-            <h2>
-              Data Engineering - Transforming data into value!
-            </h2>
+            <h2>Data Engineering - Transforming data into value!</h2>
             <p class="text-justify">
               Data Engineering is the engine behind transforming raw data into valuable insights. As a data engineering
               professional, I invite you to dive into the world of data transformation and discover the immense value it
@@ -131,53 +139,56 @@
         </div>
       </div>
     </div>
-  </section> <!-- Section de-box ends here! -->
+  </section>
+  <!-- Section de-box ends here! -->
 
-  <footer class="text-muted"> <!-- Footer begins here! -->
+  <!-- Footer begins here! -->
+  <footer class="text-muted">
     <div class="container">
-        <div class="row">
-            <div class="col-md-6 d-flex align-items-center">
-                <p>
-                    <a href="#home">Back to top</a>
-                </p>
-            </div>
-            <div class="col-md-6">
-                <p class="float-right">Shamslux's TechVault &copy; Shamslux 2024.</p>
-            </div>
+      <div class="row">
+        <div class="col-md-6 d-flex align-items-center">
+          <p><a href="#home">Back to top</a></p>
         </div>
+        <div class="col-md-6">
+          <p class="float-right">Shamslux's TechVault &copy; Shamslux 2024.</p>
+        </div>
+      </div>
     </div>
-  </footer> <!-- Footer ends here! -->
+  </footer>
+  <!-- Footer ends here! -->
 
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" 
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+  <!-- To the top effect -->
+  <script>
+    $(document).ready(function () {
+      $("a[href='#home']").on('click', function (event) {
+        if (this.hash !== "") {
+          event.preventDefault();
 
-    <!-- To the top effect -->
-    <script>
-        $(document).ready(function() {
-            $("a[href='#home']").on('click', function(event) {
-                if (this.hash !== "") {
-                    event.preventDefault();
-    
-                    var hash = this.hash;
-                    $('html, body').animate({
-                        scrollTop: $(hash).offset().top
-                    }, 1000, function() { // Removed easing function
-                        window.location.hash = hash;
-                    });
-                }
-            });
-        });
-    </script>
+          var hash = this.hash;
+          $('html, body').animate({
+            scrollTop: $(hash).offset().top
+          }, 1000, function () { // Removed easing function
+            window.location.hash = hash;
+          });
+        }
+      });
+    });
+  </script>
+
+  <!-- Progress bar! -->
+  <script src="js/shamslux.progress-bar.js"></script>
+
 </body>
 
 </html>
