(fix): Testing if navbar logo now collapses for smartphones

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <header>
     <nav class="navbar navbar-expand-sm navbar-dark bg-navbar-custom">
       <div class="container">
-        <a href="index.html" class="navbar-brand">
+        <a href="index.html" class="navbar-brand navbar-toggler">
           <h1>
             <span style="color: white; font-weight: bold;">Shamslux's</span>
             <span style="color: black;">Tech</span>
