--- a/data-projects.html
+++ b/data-projects.html
@@ -29,7 +29,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-navbar-custom">
             <div class="container">
-                <a href="index.html" class="navbar-brand">
+                <a href="index.html" class="logo display-4" style="text-decoration: none;">
                     <h1>
                         <span style="color: white; font-weight: bold;">Shamslux's</span>
                         <span style="color: black;">Tech</span>
