--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </blockquote>
           </div>
         </div>
-        <div class="col-md-6 d-flex">
+        <div class="d-none d-md-block">
           <img src="img/myself-cover.png" alt="me-avatar">
         </div>
       </div>
