--- a/data-projects.html
+++ b/data-projects.html
@@ -246,6 +246,30 @@
                         </div>
                     </div>
                     <!-- A card ends here! -->
+
+                    <!-- A card begins here! -->
+                    <div class="col-md-4 mb-4">
+                        <div class="card mb-4 shadow-sm d-flex flex-column h-100">
+                            <img class="card-img-top img-fluid" src="img/dio-github-thumbail.webp" alt="dio-github-thumbail">
+                            <div class="card-body d-flex flex-column justify-content-between">
+                                <h4>DIO's GitHub Certification Formation</h4>
+                                <p class="card-text">
+                                    This was a course I took to review my knowledge in Git and GitHub. It was a very well-planned course, although basic,
+                                    that covered everything from Git language, common uses of GitHub, to less explored parts in other basic courses, such as
+                                    GitHub administration, plans, Codespaces, etc. The training also included 3 project challenges and one code challenge.
+                                </p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <a href="https://github.com/Shamslux/DataEngineering/blob/main/DIO-GitHub-Certification-Formation/DIO-GitHub-Certification-Formation.md"
+                                            target="_blank" class="btn btn-sm btn-outline-secondary">
+                                            <i class="fa-brands fa-readme"></i> Check the Doc
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- A card ends here! -->
                 </div>
             </div>
         </div>
