(update): Raízen, new job included!

--- a/about-me.html
+++ b/about-me.html
@@ -137,6 +137,12 @@
                         possibly one of the largest migration projects within a Hadoop environment.
                     </p>
                     <p class="text-justify">
+                        In April 2024, I started as an Analytics Data Engineer at Raízen, a renewable energy company in Brazil, a giant in the
+                        energy sector and full of innovations. I have had immense pleasure in working at Raízen and being able to, along with
+                        brilliant colleagues, "redefine the future of energy." We work with wonderful people and cutting-edge technologies,
+                        especially with the Azure environment, Airflow, and a lot of Python and SQL.
+                    </p>
+                    <p class="text-justify">
                         As a result, these experiences allowed me to work in all phases of data projects. I am capable of
                         understanding the entire process, from gathering business requirements with clients, through data
                         transformation (ETL/ELT), handling various types of data (structured, semi-structured, or
