(update): Updating pages content!

--- a/about-me.html
+++ b/about-me.html
@@ -57,6 +57,9 @@
                         <li class="nav-item">
                             <a href="web-projects.html" class="nav-link">WebDev Projects</a>
                         </li>
+                        <li class="nav-item">
+                            <a href="my-jobs.html" class="nav-link">Working Career</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -194,8 +197,8 @@
                     <p class="text-justify">
                         Do you know what a 'lingvemulo' is? I imagine you don't, but it's a word in Esperanto that
                         describes people like me: someone with a inclination for languages. I love learning new languages!
-                        In addition to my personal passion for English, I have been studying French, Chinese, and Dutch,
-                        and I have also had previous exposure to Arabic and Modern Hebrew.
+                        In addition to my personal passion for English, I have been studying French and Esperanto (I am currently around A2-B1
+                        in these languages).
                     </p>
                 </div>
             </div>
