--- a/data-projects.html
+++ b/data-projects.html
@@ -56,6 +56,9 @@
                         <li class="nav-item">
                             <a href="web-projects.html" class="nav-link">WebDev Projects</a>
                         </li>
+                        <li class="nav-item">
+                            <a href="my-jobs.html" class="nav-link">Working Career</a>
+                        </li>
                     </ul>
                 </div>
             </div>
