(fix): Link to BI information!

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               data. As a BI professional, I'll take you on a journey to discover why BI matters for you. Explore the
               power of data-driven decisions and how BI can transform your business strategy.
             </p>
-            <a href="/bi-about.html" class="btn btn-primary">Click to learn more!</a>
+            <a href="bi-about.html" class="btn btn-primary">Click to learn more!</a>
           </div>
         </div>
         <div class="col-md-6">
