--- a/data-projects.html
+++ b/data-projects.html
@@ -91,6 +91,32 @@
                     <!-- A card begins here! -->
                     <div class="col-md-4 mb-4">
                         <div class="card mb-4 shadow-sm d-flex flex-column h-100">
+                            <img class="card-img-top img-fluid" src="img/dbt.jpg" alt="dbt-project">
+                            <div class="card-body d-flex flex-column justify-content-between">
+                                <h4>dbt Project</h4>
+                                <p class="card-text">
+                                    I created this personal project to practice basic dbt fundamentals since we started using it at our company.
+                                </p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <a href="https://github.com/Shamslux/DataEngineering/blob/main/dbt-pokemon-project/pokemon-dbt-testing-project.md"
+                                            target="_blank" class="btn btn-sm btn-outline-secondary">
+                                            <i class="fa-brands fa-readme"></i> Check the Doc
+                                        </a>
+                                        <a href="https://github.com/Shamslux/DataEngineering/tree/main/dbt-pokemon-project"
+                                            target="_blank" class="btn btn-sm btn-outline-secondary">
+                                            <i class="fa-solid fa-folder-open"></i> Check the Project
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- A card ends here! -->
+
+                    <!-- A card begins here! -->
+                    <div class="col-md-4 mb-4">
+                        <div class="card mb-4 shadow-sm d-flex flex-column h-100">
                             <img class="card-img-top img-fluid" src="img/hive-impala-ai.png" alt="hive-impala-course">
                             <div class="card-body d-flex flex-column justify-content-between">
                                 <h4>Hive/Impala Course and Project</h4>
