(update): Added new OWSE working experience!

--- a/career-eng.html
+++ b/career-eng.html
@@ -326,6 +326,61 @@
           </div>
         </div>
       </div>
+  
+
+      <!-- Timeline Item -->
+      <div class="relative pl-12 md:pl-20 mb-16">
+
+        <!-- Dot -->
+        <div class="absolute left-0 md:left-4 top-1 w-4 h-4 bg-yellow-400 rounded-full shadow-lg"></div>
+
+        <!-- Year -->
+        <h3 class="text-yellow-400 font-semibold text-lg mb-2 ml-2 md:ml-6">2025</h3>
+
+        <!-- Content -->
+        <div class="bg-gray-800 p-6 rounded-lg shadow-lg ml-4 md:ml-10">
+
+          <!-- Logo + Description side by side -->
+          <div class="flex flex-col md:flex-row items-start gap-6">
+            
+            <!-- Logo -->
+            <div class="flex-shrink-0 mb-4 md:mb-0">
+              <img src="assets/owse.svg" alt="OWSE Logo" class="h-28 w-28">
+            </div>
+
+            <!-- Description -->
+            <div class="text-gray-300 text-sm space-y-4">
+              <p><strong>Data Engineer – OWSE - Brazil</strong><br>
+              <em>Hybrid - June 2025 to Present</em></p>
+
+              <ul class="list-disc list-inside space-y-1">
+                <li>Returned now as a contractor.</li>
+                <li>Performed <strong>business rules analysis</strong> and <strong>dimensional data modeling</strong> to support data warehouse design and project requirements.</li>
+                <li>Managed team routines by creating <strong>milestones</strong>, <strong>issues</strong>, and <strong>tasks</strong> for our three main clients, ensuring better workflow visibility and delivery tracking.</li>
+                <li>Developed data pipelines using <strong>Apache Hop</strong>, handling data extraction, transformation, and loading processes.</li>
+                <li>Created and maintained <strong>Python-based RPAs</strong> (Robotic Process Automation) to automate repetitive tasks and reduce manual workload.</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- Divider -->
+          <div class="my-4 border-t border-yellow-700 opacity-30"></div>
+
+          <!-- Tools Used -->
+          <div class="flex flex-wrap gap-4">
+            <img src="assets/sql-database-generic-svgrepo-com.svg" alt="SQL" class="w-8 h-8 tool-icon" data-label="SQL">
+            <img src="assets/pbi.png" alt="Power BI" class="w-8 h-8 tool-icon" data-label="Microsoft's Power BI">
+            <img src="assets/jenkins-original.svg" alt="Jenkins" class="w-8 h-8 tool-icon" data-label="Jenkins">
+            <img src="assets/pentaho.png" alt="Pentaho" class="w-8 h-8 tool-icon" data-label="Pentaho Data Integration">
+            <img src="assets/hop-logo.svg" alt="Apache Hop" class="w-8 h-8 tool-icon bg-white rounded-lg p-1" data-label="Apache Hop">
+            <img src="assets/python-original.svg" alt="Python" class="w-8 h-8 tool-icon" data-label="Python">
+            <img src="assets/gitlab-original.svg" alt="GitLab" class="w-8 h-8 tool-icon" data-label="GitLab">
+            <img src="assets/azure-original.svg" alt="Azure" class="w-8 h-8 tool-icon" data-label="Microsoft's Azure Environment">
+            <img src="assets/metabase.svg" alt="Metabase" class="w-8 h-8 tool-icon" data-label="Metabase">
+          </div>
+
+        </div>
+      </div>      
 
   </section>
 
