(update): I hate tech interviews data project added!

--- a/data-projects-eng.html
+++ b/data-projects-eng.html
@@ -103,6 +103,33 @@
 
     <!-- Card Component -->
     <div class="bg-gray-800 rounded-lg shadow-lg overflow-hidden flex flex-col">
+    <img src="assets/recruitment.svg" alt="i-hate-tech-interviews"
+        class="w-full h-32 object-contain bg-gray-900 p-4 rounded-t-lg">
+    <div class="p-6 flex flex-col flex-grow justify-between">
+        <div>
+        <h2 class="text-xl font-semibold text-yellow-400 mb-2">I Hate Tech Interviews!</h2>
+        <p class="text-gray-300 text-sm">
+          Calm down, don't be sad about the title if you're a Tech Recruiter! I'll always be willing to take on your technical
+          challenges and, being honest, I enjoy trying them. I just confess it's uncomfortable when it's something like Live
+          Coding, because the nervousness is high and, being honest, we don't know everything by heart, on the contrary, research
+          and mental reflection are the biggest daily tools for tech professionals (shhh! don't tell them I revealed the secret,
+          hehe). Anyway, here are some cases I've done in the past in other selection processes. I hope it helps colleagues who
+          need to go through this (and Tech Recruiters, so you can already get an idea of my competence, if it will be aligned
+          with what you want, hahaha).
+        </p>
+        </div>
+        <div class="mt-4 flex gap-2">
+        <a href="https://github.com/Shamslux/Data-Engineering-AI-Solutions/tree/main/IHateTechReview" 
+            target="_blank"
+            class="inline-flex items-center gap-2 px-3 py-1 text-sm text-yellow-300 border border-gray-600 rounded-md bg-gray-800 hover:bg-yellow-600 hover:text-white transition-all duration-200">
+            <i data-lucide="folder-open" class="w-5 h-5"></i> Check the Project
+        </a>
+        </div>
+    </div>
+    </div>    
+
+    <!-- Card Component -->
+    <div class="bg-gray-800 rounded-lg shadow-lg overflow-hidden flex flex-col">
       <img src="assets/dbt-icon-filled-256.png" alt="dbt-project" class="w-full h-32 object-contain bg-gray-900 p-4">
       <div class="p-6 flex flex-col flex-grow justify-between">
         <div>
