--- a/about-me-eng.html
+++ b/about-me-eng.html
@@ -132,7 +132,7 @@
   <!-- Footer Section -->
   <footer id="career" class="border-t border-yellow-800 pt-6 pb-12 text-center text-sm text-gray-500 px-4">
     <p>
-      <a href="about-me-eng.html" class="hover:underline text-yellow-300">Back to top</a>
+      <a href="index-eng.html" class="hover:underline text-yellow-300">Back to top</a>
     </p>
 
     <p class="mt-2">Shamslux's TechVault &copy; Shamslux 2025.</p>
@@ -144,7 +144,7 @@
         Shamslux
       </a>
     </p>
-      <div class="flex justify-center gap-4 mt-4">
+  <div class="flex justify-center gap-4 mt-4">
     <a href="#">
       <img src="https://flagcdn.com/w40/br.png" alt="Português" class="flag-icon" data-label="Disponível em breve!">
     </a>
@@ -152,8 +152,11 @@
       <img src="https://flagcdn.com/w40/us.png" alt="English" class="flag-icon">
     </a>
     <a href="#">
-      <img src="https://flagcdn.com/w40/nl.png" alt="Nerderlands" class="flag-icon" data-label="Binnenkort beschikbaar!">
+      <img src="https://flagcdn.com/w40/es.png" alt="Spain" class="flag-icon" data-label="¡Próximamente disponible!">
     </a>
+    <!-- <a href="#">
+      <img src="https://flagcdn.com/w40/nl.png" alt="Nerderlands" class="flag-icon" data-label="Binnenkort beschikbaar!">
+    </a> -->
   </div>
   </footer>
 
