--- a/career-eng.html
+++ b/career-eng.html
@@ -305,7 +305,7 @@
             <!-- Description -->
             <div class="text-gray-300 text-sm space-y-4">
               <p><strong>BI Consultant (Freelancer) – Global Digital Community - Scotland, UK</strong><br>
-              <em>Remote – April 2024 to Present</em></p>
+              <em>Remote – April 2024 to July 2025</em></p>
               <ul class="list-disc list-inside space-y-1">
                 <li>Designed and implemented <strong>data models</strong> and <strong>ETL processes</strong> in SQL for relational databases, leveraging BI methodologies to optimize data management and analysis.</li>
                 <li>Developed interactive <strong>Power BI dashboards</strong> tailored to business needs, translating database models into actionable insights for stakeholders.</li>
@@ -376,6 +376,8 @@
             <img src="assets/gitlab-original.svg" alt="GitLab" class="w-8 h-8 tool-icon" data-label="GitLab">
             <img src="assets/azure-original.svg" alt="Azure" class="w-8 h-8 tool-icon" data-label="Microsoft's Azure Environment">
             <img src="assets/metabase.svg" alt="Metabase" class="w-8 h-8 tool-icon" data-label="Metabase">
+            <img src="assets/django.svg" alt="Django" class="w-8 h-8 tool-icon" data-label="Django">
+            <img src="assets/django_ninja.png" alt="Django Ninja" class="w-8 h-8 tool-icon" data-label="Django Ninja">
           </div>
 
         </div>
@@ -387,7 +389,7 @@
   <!-- Footer Section -->
   <footer id="career" class="border-t border-yellow-800 pt-6 pb-12 text-center text-sm text-gray-500 px-4">
     <p>
-      <a href="career-eng.html" class="hover:underline text-yellow-300">Back to top</a>
+      <a href="index-eng.html" class="hover:underline text-yellow-300">Back to top</a>
     </p>
 
     <p class="mt-2">Shamslux's TechVault &copy; Shamslux 2025.</p>
@@ -399,7 +401,7 @@
         Shamslux
       </a>
     </p>
-      <div class="flex justify-center gap-4 mt-4">
+  <div class="flex justify-center gap-4 mt-4">
     <a href="#">
       <img src="https://flagcdn.com/w40/br.png" alt="Português" class="flag-icon" data-label="Disponível em breve!">
     </a>
@@ -407,8 +409,11 @@
       <img src="https://flagcdn.com/w40/us.png" alt="English" class="flag-icon">
     </a>
     <a href="#">
-      <img src="https://flagcdn.com/w40/nl.png" alt="Nerderlands" class="flag-icon" data-label="Binnenkort beschikbaar!">
+      <img src="https://flagcdn.com/w40/es.png" alt="Spain" class="flag-icon" data-label="¡Próximamente disponible!">
     </a>
+    <!-- <a href="#">
+      <img src="https://flagcdn.com/w40/nl.png" alt="Nerderlands" class="flag-icon" data-label="Binnenkort beschikbaar!">
+    </a> -->
   </div>
   </footer>
 
