--- a/data-projects-eng.html
+++ b/data-projects-eng.html
@@ -76,6 +76,29 @@
 <section class="bg-gray-900 py-12">
   <div class="max-w-7xl mx-auto px-4 grid gap-8 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
 
+        <!-- Card Component -->
+    <div class="bg-gray-800 rounded-lg shadow-lg overflow-hidden flex flex-col">
+    <img src="assets/django_project.png" alt="anac-project"
+        class="w-full h-32 object-contain bg-gray-900 p-4 rounded-t-lg">
+    <div class="p-6 flex flex-col flex-grow justify-between">
+        <div>
+        <h2 class="text-xl font-semibold text-yellow-400 mb-2">Django + Django Ninja API Project</h2>
+        <p class="text-gray-300 text-sm">
+          This project was the result of a request from a company I worked for, asking us to create a study project using Django +
+          Django Ninja for API development. We needed to assist with maintenance and feature creation in one of their products,
+          and this project served to demonstrate our basic knowledge. It was a very enjoyable experience.
+        </p>
+        </div>
+        <div class="mt-4 flex gap-2">
+        <a href="https://github.com/Shamslux/Data-Engineering-AI-Solutions/blob/main/PageTurnerShamsluxDjangoNinjaProject/PageTurnerDjangoNinjaAPI.md" 
+            target="_blank"
+            class="inline-flex items-center gap-2 px-3 py-1 text-sm text-yellow-300 border border-gray-600 rounded-md bg-gray-800 hover:bg-yellow-600 hover:text-white transition-all duration-200">
+            <i data-lucide="folder-open" class="w-5 h-5"></i> Check the Project
+        </a>
+        </div>
+    </div>
+    </div>
+
     <!-- Card Component -->
     <div class="bg-gray-800 rounded-lg shadow-lg overflow-hidden flex flex-col">
     <img src="assets/anac.png" alt="anac-project"
@@ -84,7 +107,7 @@
         <div>
         <h2 class="text-xl font-semibold text-yellow-400 mb-2">ANAC Data Project</h2>
         <p class="text-gray-300 text-sm">
-            My most recent project involved working with public data from ANAC (Brazil’s National Civil Aviation Agency). The
+            This project involved working with public data from ANAC (Brazil’s National Civil Aviation Agency). The
             project documentation is currently available only in Portuguese, including a video explanation. I used technologies such
             as Airflow and Spark running in Docker, along with Jupyter Notebooks. I also created dashboards using Power BI.
             Moreover, I leveraged GPT-4o to accelerate the entire process, showcasing how AI tools can enhance our workflows, assist
@@ -342,7 +365,7 @@
   <!-- Footer Section -->
   <footer id="career" class="border-t border-yellow-800 pt-6 pb-12 text-center text-sm text-gray-500 px-4">
     <p>
-      <a href="data-projects-eng.html" class="hover:underline text-yellow-300">Back to top</a>
+      <a href="index-eng.html" class="hover:underline text-yellow-300">Back to top</a>
     </p>
 
     <p class="mt-2">Shamslux's TechVault &copy; Shamslux 2025.</p>
@@ -354,7 +377,7 @@
         Shamslux
       </a>
     </p>
-      <div class="flex justify-center gap-4 mt-4">
+  <div class="flex justify-center gap-4 mt-4">
     <a href="#">
       <img src="https://flagcdn.com/w40/br.png" alt="Português" class="flag-icon" data-label="Disponível em breve!">
     </a>
@@ -362,8 +385,11 @@
       <img src="https://flagcdn.com/w40/us.png" alt="English" class="flag-icon">
     </a>
     <a href="#">
-      <img src="https://flagcdn.com/w40/nl.png" alt="Nerderlands" class="flag-icon" data-label="Binnenkort beschikbaar!">
+      <img src="https://flagcdn.com/w40/es.png" alt="Spain" class="flag-icon" data-label="¡Próximamente disponible!">
     </a>
+    <!-- <a href="#">
+      <img src="https://flagcdn.com/w40/nl.png" alt="Nerderlands" class="flag-icon" data-label="Binnenkort beschikbaar!">
+    </a> -->
   </div>
   </footer>
 
