--- a/career-eng.html
+++ b/career-eng.html
@@ -72,7 +72,39 @@
       <!-- Vertical Line -->
       <div class="absolute left-6 top-1 h-full w-0.5 bg-yellow-600"></div>
 
-      <!-- 2025 -->
+            <!-- 2025 (Eng) -->
+      <div class="relative pl-12 md:pl-20 mb-16">
+        <div class="absolute left-0 md:left-4 top-1 w-4 h-4 bg-yellow-400 rounded-full shadow-lg"></div>
+        <h3 class="text-yellow-400 font-semibold text-lg mb-2 ml-2 md:ml-6">2025</h3>
+        <div class="bg-gray-800 p-6 rounded-lg shadow-lg ml-4 md:ml-10">
+          <div class="flex flex-col md:flex-row items-start gap-6">
+            <div class="flex-shrink-0 mb-4 md:mb-0">
+              <img src="assets/eng.png" alt="Eng Logo" class="h-28 w-28 invert brightness-0"/>
+
+            </div>
+            <div class="text-gray-300 text-sm space-y-4">
+              <p><strong>Engineering Brazil - Brazil</strong><br>
+              <em>Hybrid - November 2025 to Currently</em></p>
+              <ul class="list-disc list-inside space-y-1">
+              <ul>
+                  <li>Design and development of data pipelines using <strong>Django REST Framework</strong>.</li>
+                  <li>Implementation of <strong>ETL processes</strong> built with <strong>Python</strong> and its data libraries.</li>
+                  <li><strong>Data modeling</strong> with a deep understanding of <strong>business rules</strong> and domain requirements.</li>
+                  <li>Application of <strong>data performance optimization</strong> and <strong>data governance best practices</strong>.</li>
+              </ul>
+            </div>
+          </div>
+          <div class="my-4 border-t border-yellow-700 opacity-30"></div>
+          <div class="flex flex-wrap gap-4">
+            <img src="assets/sql-database-generic-svgrepo-com.svg" alt="SQL" class="w-8 h-8 tool-icon" data-label="SQL">
+            <img src="assets/python-original.svg" alt="Python" class="w-8 h-8 tool-icon" data-label="Python">
+            <img src="assets/azure-devops-svgrepo-com.svg" alt="Azure" class="w-8 h-8 tool-icon" data-label="Microsoft's Azure Devops">
+            <img src="assets/django.svg" alt="Django" class="w-8 h-8 tool-icon" data-label="Django">
+          </div>
+        </div>
+      </div>
+
+      <!-- 2025 (OSWSE) -->
       <div class="relative pl-12 md:pl-20 mb-16">
         <div class="absolute left-0 md:left-4 top-1 w-4 h-4 bg-yellow-400 rounded-full shadow-lg"></div>
         <h3 class="text-yellow-400 font-semibold text-lg mb-2 ml-2 md:ml-6">2025</h3>
